--- a/etapas.html
+++ b/etapas.html
@@ -13,7 +13,7 @@
         <!-- Cabeçalho com o logo -->
 <header class="header">
     <div class="header-content">
-        <img src="logo_site.png" alt="Logo do Site" class="logo">
+        <img src="logo_site.png" alt="Logo do Site Oikos" class="logo">
 <!-- Botão hambúrguer (visível apenas no mobile) -->
     <div class="menu-hamburguer">
 	    <span></span>
@@ -49,7 +49,7 @@
             <p class="paragrafo-processo">Essa conversa é uma base sólida para o desenvolvimento da nossa solução.</p>
         </div>
         <div class="imagem-lado-direito">
-            <img src="reuniao_inicial.jpg" alt="Mulheres conversando em um ambiente de trabalho" class="img-processo">
+            <img src="reuniao_inicial.jpg" alt="Mulheres conversando em um ambiente de trabalho." class="img-processo">
         </div>
     </div>
 		
@@ -57,7 +57,7 @@
     <!-- Design e Desenvolvimento -->
     <div class="etapa">
         <div class="imagem-lado-esquerdo">
-            <img src="design_desenvolvimento.png" alt="Mãos segurando amostras de paletas de cores" class="img-processo">
+            <img src="design_desenvolvimento.png" alt="Mãos segurando amostras de paletas de cores." class="img-processo">
         </div>
         <div class="texto-lado-direito">
             <h3 class="numero-etapa">02</h3>
@@ -78,14 +78,14 @@
             <p class="paragrafo-processo">Garantimos que todos os aspectos técnicos estejam em conformidade com as normas de construção e sustentabilidade.</p>
         </div>
         <div class="imagem-lado-direito">
-            <img src="desenhotec.jpg" alt="Mesa de trabalho organizada para um projeto de design" class="img-processo">
+            <img src="desenhotec.jpg" alt="Mesa de trabalho organizada para um projeto de design." class="img-processo">
         </div>
     </div>
 		
 		<!-- Execução e gestão -->
 		<div class="etapa">
         <div class="imagem-lado-esquerdo">
-            <img src="execgestao.png" alt="" class="img-processo">
+            <img src="execgestao.png" alt="Equipe trabalhando em um projeto de interiores." class="img-processo">
         </div>
         <div class="texto-lado-direito">
             <h3 class="numero-etapa">04</h3>
@@ -106,28 +106,28 @@
 				<p class="paragrafo-processo"> Garantimos que cada detalhe esteja perfeito e alinhado à visão do projeto.</p>
 	    	</div>
 			<div class="imagem-lado-direito">
-               <img src="instalação.png" alt="" class="img-processo">
+               <img src="instalação.png" alt="Sofá com amostras de tecido, enquanto uma pessoa segura um pedaço de couro vermelho." class="img-processo">
         </div>
     </div>
 		
 		<!-- Avaliação final e entrega -->
 		<div class="etapa">
         <div class="imagem-lado-esquerdo">
-		    <img src="avaliação.png" alt="" class="img-processo">
+		    <img src="avaliação.png" alt="Casal conversando com um homem que os apresenta um ambiente da casa." class="img-processo">
 		</div>
 		<div class="texto-lado-direito">
 			<h3 class="numero-etapa">06 </h3>
 			<h3 class="nome-etapa">Avaliação final e entrega </h3>
 			<p class="paragrafo-processo"> Por fim, realizamos uma avaliação completa do espaço.</p>
 			<p class="paragrafo-processo"> Verificamos se todos os requisitos foram atendidos e se o resultado final corresponde às expectativas do cliente.</p>
-			<p class="paragrafo-processo"> Após ajustes finais, entregamos o projeto, proporcionando ao cliente uma experiência única e sustentável.</p>
+			<p class="paragrafo-processo"> Após ajustes finais, entregamos o projeto, proporcionando ao cliente uma experiência única.</p>
 		</div>
     </div>
 </div>
 
 <footer>
         <div class="footer-container">
-            <img src="rodapé.png" alt="Descrição da Imagem" class="footer-image">
+            <img src="rodapé.png" alt="Rodapé com informações de contato (redes sociais, telefone, endereço e e-mail)" class="footer-image">
             <div class="footer-text">
                 <p>Copyright © 2024 - Estúdio Oikos</p>
             </div>
