--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!-- Cabeçalho com o logo -->
 <header class="header">
     <div class="header-content">
-        <img src="logo_site.png" alt="Logo do Site" class="logo">		
+        <img src="logo_site.png" alt="Logo do Site Oikos" class="logo">		
 <!-- Botão hambúrguer (visível apenas no mobile) -->
         <div class="menu-hamburguer">
             <span></span>
@@ -35,13 +35,13 @@
 
 <!-- Imagem inicial -->
 <div class="imagem-inicial">
-    <img src="header.png" alt="Imagem de fundo" class="imagem-largura-total">
+    <img src="header.png" alt="Imagem inicial do site com a frase: Bem-vindo(a) ao Oikos! Um estúdio de design de interiores focado em sustentabilidade." class="imagem-largura-total">
 </div>
 
 <!-- Seção Sobre o Estúdio -->
 <div class="sobre-o-estudio">
     <div class="imagem-lado-esquerdo">
-        <img src="imagem_cadeira.png" alt="Descrição da Imagem">
+        <img src="imagem_cadeira.png" alt="Cadeira posicionada ao lado de uma luminária de chão.">
     </div>
     <div class="texto-lado-direito">
             <h2>Sobre o estúdio</h2>
@@ -53,7 +53,7 @@
 
 <!-- Seção Quadrado Verde com Estatísticas -->
 <div class="imagem-quadrado">
-	    <img src="visaogeral.png" alt="Descrição da Imagem">
+	    <img src="visaogeral.png" alt="Visão geral: 10 anos de experiência; +300 projetos concluídos e 18 prêmios.">
 </div>	
 
 <!-- Seção Importância e Propósito -->
@@ -66,7 +66,7 @@
             <p>Mais do que projetar espaços, buscamos inspirar uma nova consciência sobre o valor de viver em harmonia com o meio ambiente.</p>
 	</div>		
     <div class="imagem-lado-direito">
-        <img src="mulher_plantas.png" alt="Descrição da Imagem">
+        <img src="mulher_plantas.png" alt="Mulher colocando um vaso de planta em uma estante">
     </div>
 </div>
 	
@@ -80,7 +80,7 @@
 
  <footer>
         <div class="footer-container">
-            <img src="rodapé.png" alt="Descrição da Imagem" class="footer-image">
+            <img src="rodapé.png" alt="Rodapé com informações de contato (redes sociais, telefone, endereço e e-mail)" class="footer-image">
             <div class="footer-text">
                 <p>Copyright © 2024 - Estúdio Oikos</p>
             </div>
