--- a/serviços.html
+++ b/serviços.html
@@ -13,7 +13,7 @@
         <!-- Cabeçalho com o logo -->
 <header class="header">
     <div class="header-content">
-        <img src="logo_site.png" alt="Logo do Site" class="logo">
+        <img src="logo_site.png" alt="Logo do Site Oikos" class="logo">
 <!-- Botão hambúrguer (visível apenas no mobile) -->
 <div class="menu-hamburguer">
     <span></span>
@@ -42,7 +42,7 @@
     <!-- Container único para a grade -->
     <div class="servicos-container">
         <div class="servico-item">
-            <img src="casa.png" alt="Ícone de Projetos Residenciais" class="icone">
+            <img src="casa.png" alt="Ícone Residencial" class="icone">
             <h3>Projetos residenciais</h3>
             <p>Planejamento personalizado de espaços residenciais, focado em criar ambientes confortáveis, funcionais e sustentáveis.</p>
             <p>Cada projeto visa atender às necessidades dos moradores, utilizando materiais e técnicas que reduzem o impacto ambiental.</p>
@@ -87,7 +87,7 @@
 
 <footer>
     <div class="footer-container">
-        <img src="rodapé.png" alt="Descrição da Imagem" class="footer-image">
+        <img src="rodapé.png" alt="Rodapé com informações de contato (redes sociais, telefone, endereço e e-mail)" class="footer-image">
         <div class="footer-text">
             <p>Copyright © 2024 - Estúdio Oikos</p>
         </div>
