--- a/contato.html
+++ b/contato.html
@@ -13,7 +13,7 @@
         <!-- Cabeçalho com o logo -->
 <header class="header">
     <div class="header-content">
-        <img src="logo_site.png" alt="Logo do Site" class="logo">
+        <img src="logo_site.png" alt="Logo do Site Oikos" class="logo">
 <!-- Botão hambúrguer (visível apenas no mobile) -->
 <div class="menu-hamburguer">
     <span></span>
@@ -36,7 +36,7 @@
 		<section class="contact-section">
     <div class="contact-content">
         <div class="contact-image">
-            <img src="cadeira_contato.jpg" alt="Imagem decorativa">
+            <img src="cadeira_contato.jpg" alt="Ambiente iluminado com móveis de madeira.">
         </div>
         <div class="contact-form">
             <h2>Vamos conversar sobre seu projeto?</h2>
@@ -62,7 +62,7 @@
 		
 <footer>
         <div class="footer-container">
-            <img src="rodapé.png" alt="Descrição da Imagem" class="footer-image">
+            <img src="rodapé.png" alt="Rodapé com informações de contato (redes sociais, telefone, endereço e e-mail)" class="footer-image">
             <div class="footer-text">
                 <p>Copyright © 2024 - Estúdio Oikos</p>
             </div>
