--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
 
 <header class="header">
     <div class="header-content">
-        <img src="logo_site.png" alt="Logo do Site" class="logo">
+        <img src="logo_site.png" alt="Logo do Site Oikos" class="logo">
 <!-- Botão hambúrguer (visível apenas no mobile) -->
 <div class="menu-hamburguer">
     <span></span>
@@ -104,7 +104,7 @@
         </div>
         <div class="gallery">
             <div class="gallery-item">
-                <img src="quintal.jpg" alt="Escritório no quintal" class="galeria-img">
+                <img src="quintal.jpg" alt="Quintal coberto" class="galeria-img">
                 <p> Quintal coberto, 2022</p>
             </div>
         </div>
@@ -114,7 +114,7 @@
 	
 <footer>
         <div class="footer-container">
-            <img src="rodapé.png" alt="Descrição da Imagem" class="footer-image">
+            <img src="rodapé.png" alt="Rodapé com informações de contato (redes sociais, telefone, endereço e e-mail)" class="footer-image">
             <div class="footer-text">
                 <p>Copyright © 2024 - Estúdio Oikos</p>
             </div>
